--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ APP_SECRET=9e7a16943555719d20e530d9f904e31d
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 #DATABASE_URL="mysql://root@127.0.0.1:3306/innovation_software_task_%kernel.environment%?serverVersion=8&charset=utf8mb4"
-DATABASE_URL="postgresql://@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
+DATABASE_URL="postgresql://root@127.0.0.1:5432/database-1?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
